css/platemath.css
body {
    background: #f0ead6;
    margin-top: 100px;
    font-family: 'Rubik', sans-serif;
    color: #2E3640;
    text-align: center;
}

h1 {
    margin-bottom: 3rem;
    font-size: 80px;
}

.ask {
    font-size: 26px;
}

.output {
    font-family: 'Rubik', sans-serif;
    font-size: 20px;
}

.footer {
    margin-top: 2rem;
}

.btnOpen a {
    position: absolute;
    top: 5px;
    right: 25px;
    font-size: 30px;
    margin-left: 50px;
    color: #111111;
}

.btnOpen a:hover {
    color: #686c6d;
    transition: 0.3s;
}

.navmenu {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    right: 0;
    background-color: #373737;
    overflow-x: hidden;
    padding-top: 60px;
    transition: 0.5s;
}

.navmenu a {
    text-align: center;
    font-size: 25px;
    color: #9d9d9d;
    display: block;
}

.navmenu a:hover {
    color: #f1f1f1;
    transition: 0.3s;
    text-decoration: none;
}

.navmenu p:hover {
    background: #444444;
    transition: 0.5s;
}

.navmenu .btnClose {
    position: absolute;
    top: 5px;
    right: 25px;
    font-size: 30px;
    margin-left: 50px;
}

#main {
    transition: margin-right 0.5s;
    padding: 20px;
}

